# Weles

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  alembic.ini  issues.md  plan.md  pyproject.toml  weles.spec
.claude/commands/: work.md
.github/: pull_request_template.md
.github/workflows/: build-windows.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_indices.py
blocklist/: commercial_domains.txt  community_domains.txt
config/: programs.toml  seasonal.toml  subreddits.toml
config/geo_blocks/: PL.txt
docs/: api.md  architecture.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
scripts/: create_github_issues.py  create_labels.py  eval_confidence.py  eval_research.py
src/weles/: __main__.py  tray.py
tests/: conftest.py
tests/integration/: test_api.py  test_export.py  test_history.py  test_history_pagination.py  test_history_search.py  test_indices.py  test_message_limits.py  test_messages_pagination.py  test_migration.py  test_mode.py  test_mode_switch.py  test_preferences_api.py  test_profile_api.py  test_profile_chip_payload.py  test_session_delete.py  test_session_search.py  test_shopping_mode.py  test_sse.py
tests/unit/: test_anti_bias.py  test_check_in.py  test_client.py  test_compression.py  test_compression_task.py  test_context.py  test_credibility.py  test_decay.py  test_diet_mode.py  test_dispatch.py  test_fitness_mode.py  test_follow_up.py  test_history_context.py  test_messages_handler.py  test_paths.py  (+24 more)
(+39 files in other folders)
