[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weles"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "alembic>=1.15.0",
    "sqlalchemy>=2.0.0",
    "pystray>=0.19.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "langsmith>=0.7.30",
]

[project.scripts]
weles = "weles.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.0",
    "pyinstaller>=6.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weles"]

[tool.ruff]
line-length = 100
src = ["src"]
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["alembic/", "tests/", "scripts/"]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "alembic.*",
    "pystray.*",
    "sse_starlette.*",
    "langsmith.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
